# 1dpme

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  plot_solution.m  variables.data
src/: CMakeLists.txt  linear_solvers.f90  main.f90  special_functions.f90
